--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <a href="" class="navbar-brand">Dtu:)<span class="bluish-color">ition</span> </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarMenu"
                 aria-expanded="false" aria-controls="navbarMenu">
-                <span class="navbar-navbar-toggle-icon"></span>
+                <span class="navbar navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarMenu">
                 <ul class="navbar-nav mr-auto">
